# fig

./: .clang-format  CMakeLists.txt  README.md
include/fig/: assert.hpp  debug.hpp  detail.hpp  error.hpp  log.hpp  panic.hpp  unreach.hpp
include/fig/detail/: IsBool.hpp  LogPrint.hpp  StandardPrint.hpp  Utils.hpp  WarningPrint.hpp  WarningPrintStackTrace.hpp
test/fig/: CMakeLists.txt
test/fig/src/: TestFig.cpp
